yo/yo_core.h

////////////////////////////////////////////////////////////////
//
//
// Types
//
//
////////////////////////////////////////////////////////////////

typedef uint64_t yo_id_t;
typedef uint32_t yo_axis_t;
typedef struct yo_signal yo_signal_t;
struct yo_signal
{
    union { bool left_clicked, clicked; };
    bool right_clicked;

    bool       hovered;
    yo_v2i_t mouse_pos;  // NOTE(rune): Relative to arranged rect

    yo_keycode_t keycode;
    bool is_alt_down;
    bool is_ctrl_down;
    bool is_shift_down;

    bool is_hot;
    bool is_active;
};
////////////////////////////////////////////////////////////////
//
//
// Box
//
//
////////////////////////////////////////////////////////////////

typedef struct yo_length yo_length_t;
struct yo_length
{
    float min, max, rel;
    bool is_rel;
};
typedef struct yo_box     yo_box_t;