yo_csharp/Yo/YoNative.Generated.cs

    public enum yo_table_falgs_t : uint32_t
    {
        YO_TABLE_FLAG_NONE,
        YO_TABLE_FLAG_NO_HEADERS = 1,
    }
    [DllImport("yo_dll.dll")] public static extern yo_box_t* yo_rectangle(yo_v4f_t fill, yo_length_t width, yo_length_t height, yo_id_t id);
    [DllImport("yo_dll.dll")] public static extern yo_box_t* yo_fill(yo_v4f_t fill);
    [DllImport("yo_dll.dll")] public static extern yo_box_t* yo_circle(yo_id_t id, float diameter, yo_v4f_t fill, uint32_t border_thickness, yo_v4f_t border_color, yo_circle_flags_t flags);
    [DllImport("yo_dll.dll")] public static extern void yo_space_a(yo_length_t amount, yo_axis_t axis);
    [DllImport("yo_dll.dll")] public static extern void yo_space_h(yo_length_t amount);
    [DllImport("yo_dll.dll")] public static extern void yo_space_v(yo_length_t amount);
    [DllImport("yo_dll.dll")] public static extern void yo_layout_a(yo_axis_t axis);
    [DllImport("yo_dll.dll")] public static extern void yo_layout_h();
    [DllImport("yo_dll.dll")] public static extern void yo_layout_v();
    [DllImport("yo_dll.dll")] public static extern yo_box_t* yo_text(string text);
    [DllImport("yo_dll.dll")] public static extern yo_box_t* yo_format_text(string format, __arglist);
    [DllImport("yo_dll.dll")] public static extern yo_box_t* yo_format_text_v(string format, nint args);
    [DllImport("yo_dll.dll")] public static extern void yo_text_field(yo_id_t id, string buffer, size_t buffer_size);
    [DllImport("yo_dll.dll")] public static extern yo_signal_t yo_button(string text);
    [DllImport("yo_dll.dll")] public static extern bool yo_checkbox(string label, bool* is_checked);
    [DllImport("yo_dll.dll")] public static extern bool yo_radio(string label, uint32_t index, uint32_t* selected_index);
    [DllImport("yo_dll.dll")] public static extern void yo_bullet_item(string label);
    [DllImport("yo_dll.dll")] public static extern void yo_slider(yo_id_t id, float* value, float min, float max);
    [DllImport("yo_dll.dll")] public static extern void yo_slider_with_label(string label, float* value, float min, float max);
    [DllImport("yo_dll.dll")] public static extern yo_signal_t yo_slider_behaviour(float* value, float min, float max, yo_axis_t axis, uint32_t thumb_dim, yo_box_t* bounding_box);
    [DllImport("yo_dll.dll")] public static extern bool yo_menu_begin(string label);
    [DllImport("yo_dll.dll")] public static extern bool yo_menu_begin_ex(string label, yo_v4f_t bg);
    [DllImport("yo_dll.dll")] public static extern void yo_menu_end();
    [DllImport("yo_dll.dll")] public static extern yo_signal_t yo_menu_item(string label);
    [DllImport("yo_dll.dll")] public static extern void yo_menu_separator();
    [DllImport("yo_dll.dll")] public static extern void yo_begin_scroll_area(yo_id_t id);
    [DllImport("yo_dll.dll")] public static extern void yo_begin_scroll_area_ex(yo_id_t id, float scroll_rate, float anim_rate);
    [DllImport("yo_dll.dll")] public static extern void yo_end_scroll_area();
    [DllImport("yo_dll.dll")] public static extern void yo_table_def(yo_table_t* table, uint32_t col_count, yo_table_falgs_t flags);
    [DllImport("yo_dll.dll")] public static extern void yo_table_def_col(yo_table_t* table, string header, yo_length_t width);
    [DllImport("yo_dll.dll")] public static extern void yo_table_begin(yo_table_t* table);
    [DllImport("yo_dll.dll")] public static extern void yo_table_begin_row(yo_table_t* table);
    [DllImport("yo_dll.dll")] public static extern void yo_table_end(yo_table_t* table);
    [DllImport("yo_dll.dll")] public static extern void yo_table_end_row(yo_table_t* table);
    [DllImport("yo_dll.dll")] public static extern void yo_table_cell(yo_table_t* table);
    [DllImport("yo_dll.dll")] public static extern void yo_table_cell_text(yo_table_t* table, string text);
    [DllImport("yo_dll.dll")] public static extern void yo_table_cell_format_text_v(yo_table_t* table, string format, nint args);
    [DllImport("yo_dll.dll")] public static extern void yo_table_cell_format_text(yo_table_t* table, string format, __arglist);
    [DllImport("yo_dll.dll")] public static extern void yo_table_cell_checkbox(yo_table_t* table, string label, bool* is_checked);
    [DllImport("yo_dll.dll")] public static extern void yo_demo();
    [DllImport("yo_dll.dll")] public static extern yo_impl_win32_opengl_t* yo_impl_win32_opengl_alloc();
    [DllImport("yo_dll.dll")] public static extern void yo_impl_win32_opengl_free(yo_impl_win32_opengl_t* platform);
    [DllImport("yo_dll.dll")] public static extern void yo_impl_win32_opengl_startup(yo_impl_win32_opengl_t* platform, uint32_t window_width, uint32_t window_heigth);
    [DllImport("yo_dll.dll")] public static extern void yo_impl_win32_opengl_shutdown(yo_impl_win32_opengl_t* platform);
    [DllImport("yo_dll.dll")] public static extern void yo_impl_win32_opengl_begin_frame(yo_impl_win32_opengl_t* platform);
    [DllImport("yo_dll.dll")] public static extern void yo_impl_win32_opengl_end_frame(yo_impl_win32_opengl_t* platform);
}
